# tocken

./: .gitignore  Cargo.toml  Makefile  otp
app/: package-lock.json  package.json
app/src/: code-panel.js  enroll.js  index.html  main.js  styles.css  wizard.js
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/enroll/: error.rs  file.rs  mod.rs  parse.rs  qr.rs  validate.rs
app/src-tauri/src/session/: mod.rs  spike.rs  totp.rs  unlock.rs
app/src-tauri/src/store/: atomic.rs  crypto.rs  format.rs  mod.rs  paths.rs
app/src-tauri/src/wizard/: config.rs  mod.rs  passphrase.rs  yubikey.rs
crates/tocken-core/: Cargo.toml  build.rs
crates/tocken-core/proto/: migration.proto
crates/tocken-core/src/: lib.rs
crates/tocken-core/src/enroll/: error.rs  file.rs  migration.rs  mod.rs  parse.rs  qr.rs  validate.rs
crates/tocken-core/src/session/: spike.rs
crates/tocken-core/src/store/: crypto.rs  format.rs  mod.rs  paths.rs
crates/tocken-core/src/wizard/: passphrase.rs  yubikey.rs
crates/tocken-core/wordlists/: LICENSE-EFF-WORDLIST.md
crates/tocken-ui-slint/: Cargo.toml
crates/tocken-ui-slint/examples/: camera_spike.rs
crates/tocken-ui-slint/src/: camera.rs  code_panel.rs  enroll.rs  main.rs  wizard.rs
crates/tocken-ui-slint/ui/: enrollment.slint  main.slint  state.slint  wizard.slint
docs/architecture/: INDEX.md  adr.yaml
docs/architecture/security/: ADR-100-encrypted-seed-store-format-and-recipient-model.md  ADR-101-totp-secret-length-compliance-posture.md
docs/architecture/system/: ADR-300-pivot-ui-framework-from-tauri-to-slint.md
lib/: cmd-clip.sh  cmd-config.sh  cmd-copy.sh  cmd-expand.sh  cmd-file.sh  cmd-reload.sh  cmd-show.sh  common.sh  migration.py  migration_encode.py
scripts/: gen-test-secrets.sh
