[package]
name = "tocken"
version = "0.1.0"
description = "TOTP wallet with hardware-key unlock"
authors = ["Aaron Bockelie"]
edition = "2021"

[lib]
name = "tocken_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
