[package]
name = "tocken"
version = "0.1.0"
description = "TOTP wallet with hardware-key unlock"
authors = ["Aaron Bockelie"]
edition = "2021"

[lib]
name = "tocken_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tocken-core = { path = "../../crates/tocken-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.10.3"

# Linux camera (#6 camera source) needs an explicit WebKitGTK
# permission-request handler — without it getUserMedia is denied
# silently. The crate is already in the wry dep tree; pin matching
# version to access WebViewExt.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
