[package]
name = "tocken-ui-slint"
version = "0.1.0"
description = "Slint UI for tocken (post-ADR-300)"
authors = ["Aaron Bockelie"]
edition = "2021"

[[bin]]
name = "tocken"
path = "src/main.rs"

[dependencies]
tocken-core = { path = "../tocken-core" }
slint = "1.13"
secrecy = "0.10.3"
arboard = { version = "3", features = ["wayland-data-control"] }
rfd = "0.15"
# Camera enrollment (Stage 5): xdg-desktop-portal Camera namespace
# returns a PipeWire fd; we connect to that fd directly. ashpd is
# zbus-async, so pollster gives us a one-shot block_on for the portal
# request without dragging a runtime in.
ashpd = { version = "0.13", default-features = false, features = ["pipewire", "camera", "async-io"] }
pipewire = "0.9"
pollster = "0.4"

[build-dependencies]
slint-build = "1.13"
